# forest-phenology-tracking-system

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.postgis  Dockerfile.postgis-test  README.md  docker-compose.test.yml  docker-compose.yml  precommit_tests.sh  pyproject.toml
.github/workflows/: ci.yml
src/fpts/api/: __main__.py  dependencies.py  main.py  schemas.py  wiring.py
src/fpts/api/routers/: debug.py  health.py  phenology.py
src/fpts/cache/: codecs.py  keys.py  redis_cache.py
src/fpts/config/: settings.py
src/fpts/domain/: errors.py  models.py
src/fpts/ingestion/: __main__.py  mod13q1.py
src/fpts/processing/: ndvi_stack.py  phenology_algorithm.py  phenology_service.py  raster_service.py
src/fpts/query/: service.py
src/fpts/scripts/: generate_seed_metrics.py  load_seed_metrics.py  make_synthetic_geotiff.py  make_synthetic_ndvi_stack.py  read_synthetic_geotiff.py
src/fpts/sql/: phenology_metrics.sql
src/fpts/storage/: in_memory_repository.py  local_raster_repository.py  phenology_repository.py  postgis_phenology_repository.py  raster_repository.py
src/fpts/utils/: logging.py  metrics.py  middleware.py
tests/: test_api.py  test_ingestion_download_utils.py  test_ingestion_mod13q1_service.py  test_mod13q1_ingestion_plan.py  test_mod13q1_ingestion_service.py  test_phenology_service.py  test_query_service.py  test_raster_io.py
tests/integration/: conftest.py  test_api_point_coverage.py  test_api_postgis.py
tests/unit/: conftest.py  test_api_compute_mode.py  test_api_in_memory.py  test_api_point_coverage.py  test_debug_raster_api.py  test_metrics_endpoint.py  test_mod13q1_ingestion_service.py  test_mod13q1_offline_fixture_integration.py  test_ndvi_stack_to_phenology.py  test_phenology_algorithm.py  test_phenology_service.py  test_query_service.py  test_query_service_caching.py  test_raster_repository.py  test_raster_service.py  test_request_logging_middleware.py  test_ttl_cache.py
(+3 files in other folders)
