[tool.poetry]
name = "fpts"
version = "0.1.0"
description = "Forest Phenology Tracking System Backend"
authors = ["billyblackk"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "fpts", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.123.5"
uvicorn = "^0.38.0"
pydantic-settings = "^2.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
