[tool.poetry]
name = "fpts"
version = "0.1.0"
description = "Forest Phenology Tracking System Backend"
authors = ["billyblackk"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "fpts", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.123.5"
uvicorn = "^0.38.0"
pydantic-settings = "^2.12.0"
rasterio = "^1.5.0"
rioxarray = "^0.21.0"
numpy = "^2.4.2"
pystac-client = "^0.9.0"
planetary-computer = "^1.0.0"
requests = "^2.32.5"
psycopg = {extras = ["binary"], version = "^3.3.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
ruff = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, import sorting
